--- a/print/src/module/print/main/index.less
+++ b/print/src/module/print/main/index.less
@@ -18,3 +18,9 @@
     display: block;
   }
 }
+
+.print-main {
+  width: calc(100vw - 24px);
+  height: calc(100vh - 100px);
+  position: relative;
+}
