--- a/print/src/module/print/print-body/index.less
+++ b/print/src/module/print/print-body/index.less
@@ -1,6 +1,6 @@
-.print-main {
-  width: calc(100vw - 24px);
-  height: calc(100vh - 100px);
+.print-stage {
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: auto;
   margin-left: 24px;
@@ -28,4 +28,14 @@
       height: 296mm;
     }
   }
+}
+
+.print-option {
+  width: 280px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  // bottom: ;
+  background-color: #ccc;
 }
