--- a/print/src/module/move/index.less
+++ b/print/src/module/move/index.less
@@ -1,13 +1,23 @@
 #web-container {
   width: 600px;
   height: 400px;
-  background-color: pink;
-  margin-left: 200px;
-  margin-top: 150px;
+  border: 1px dotted pink;
+  // margin-left: 200px;
+  // margin-top: 150px;
+}
+
+.web-app {
+  width: 100%;
+  height: 200%;
 }
 
 #web-actor {
   width: 100px;
   height: 100px;
-  background-color: blue;
+  border: 1px dotted blue;
+  position: absolute;
+  top: 600px;
+  left: 50px;
+  user-select: none; /* 禁止文本选择 */
+  -webkit-user-drag: none; /* 禁止浏览器默认拖拽 */
 }
