--- a/print/src/module/move/index.less
+++ b/print/src/module/move/index.less
@@ -4,6 +4,7 @@
   border: 1px dotted pink;
   // margin-left: 200px;
   // margin-top: 150px;
+  position: relative;
 }
 
 .web-app {
@@ -20,4 +21,9 @@
   left: 50px;
   user-select: none; /* 禁止文本选择 */
   -webkit-user-drag: none; /* 禁止浏览器默认拖拽 */
+}
+
+.web-children-actor {
+  position: absolute;
+  border: 1px dotted pink;
 }
