--- a/print/src/module/print/components/input-port/index.less
+++ b/print/src/module/print/components/input-port/index.less
@@ -7,4 +7,17 @@
   & > :first-child {
     text-align: right;
   }
+
+  .scenery-description {
+    // opacity: 0.8;
+    font-size: 11px;
+    font-family:
+      ui-sans-serif,
+      system-ui,
+      sans-serif,
+      "Apple Color Emoji",
+      "Segoe UI Emoji",
+      "Segoe UI Symbol",
+      "Noto Color Emoji";
+  }
 }
